# ChangeLog for dev-python/pycipher
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pycipher/ChangeLog,v 1.1 2009/02/03 19:55:22 patrick Exp $

  02 May 2009; jnrowe@gmail.com pycipher-0.2.ebuild, metadata.xml:
  Fix package installation, license and remove broken wrapper [258676].

*pycipher-0.2 (03 Feb 2009)

  03 Feb 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +pycipher-0.2.ebuild:
  Initial import. Ebuild by Fernando V. <email@missionaccomplish.com>.
  Closes #111802
