@@ -1,5 +1,5 @@
-dev-lang/python >=app-admin/eselect-python-20091230
-dev-lang/python >=app-admin/eselect-python-20091230
+>=app-admin/eselect-python-20091230 dev-lang/python
+>=app-admin/eselect-python-20091230 dev-lang/python
 0
 mirror://sourceforge/pycipher/pycipher-0.2.py
 
@@ -12,7 +12,7 @@ multilib python toolchain-funcs
 
 
 
-
+3
 
 install postinst postrm
 
