@@ -1,6 +1,14 @@
 # ChangeLog for dev-python/pycipher
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pycipher/ChangeLog,v 1.1 2009/02/03 19:55:22 patrick Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pycipher/ChangeLog,v 1.2 2010/06/11 23:31:26 arfrever Exp $
+
+  17 Aug 2010; James Rowe <jnrowe@gmail.com> pycipher-0.2.ebuild:
+  Merged with upstream ebuild. Holding ebuild as license is still incorrect
+  [258676].
+
+  11 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pycipher-0.2.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
   02 May 2009; jnrowe@gmail.com pycipher-0.2.ebuild, metadata.xml:
   Fix package installation, license and remove broken wrapper [258676].
